--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,9 @@
+/* universal style */
+/* *{
+    margin: 0;
+    padding: 0;
+} */
+
 /* common shared styles */
 body {
     font-family: sans-serif;
@@ -10,11 +16,58 @@ body {
 .btn-primary {
     border-radius: 5px;
     background: rgb(253, 110, 10);
+    border: 0;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 700;
+    text-align: left;
+    padding: 15px 35px;
+}
+
+.section-title {
+    color: rgb(24, 24, 24);
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.section-description {
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: center;
+}
+
+/* header related styles */
+.header {
+    background-color: rgb(255, 248, 243);
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner .profile-pic {
+    width: 500px;
 }
 
 /* nav related styles */
 nav {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -27,6 +80,7 @@ nav {
 
 nav>ul {
     display: flex;
+    align-items: center;
 }
 
 nav li {
@@ -37,4 +91,61 @@ nav li {
 nav a {
     text-decoration: none;
     color: rgb(71, 71, 71);
+}
+
+/* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
+}
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: rgb(255, 248, 243);
+    margin: 130px 0;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+
+/* what i do section starts */
+#what-i-do-description {
+    padding: 30px 200px;
+}
+
+/* skill related styles */
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+}
+
+.skill-description {
+    color: rgb(117, 117, 117);
+}
+
+/* resume section styles */
+.resume-column-title {
+    color: rgb(71, 71, 71);
+    font-size: 30px;
+    font-weight: 700;
+    text-align: left;
 }
