--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -149,20 +149,43 @@ main section {
     font-weight: 700;
     text-align: left;
 }
-.resume-container{
+
+.resume-container {
     display: flex;
     gap: 80px;
     padding: 30px 90px;
 }
 
-.download-cv{
+.download-cv {
     text-align: center;
 }
 
 /* footer style */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: rgb(255, 248, 243);
     padding: 130px 200px;
     margin-top: 125px;
+}
+
+.social-links a {
+    margin-right: 50px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    color: rgb(117, 117, 117);
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    border: 0;
+    width: 100%;
 }
