added font awesome icons

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -42,9 +42,9 @@ body {
 /* header related styles */
 .header {
     background-color: rgb(255, 248, 243);
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: right bottom;
+    background-position: right bottom, left top;
 }
 
 .banner {
